--- a/res/layout/activity_robot_brain.xml
+++ b/res/layout/activity_robot_brain.xml
@@ -14,11 +14,20 @@
         android:layout_width="match_parent"
     	android:layout_height="0dp"
 	    android:layout_weight="1"/>
-    
-    <Button
-    	android:id="@+id/button1"    
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:text="@string/button1_label"/>
-
+   	<LinearLayout
+		android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+  	    android:orientation="horizontal">
+	    <Button
+	    	android:id="@+id/button1"    
+	        android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:text="@string/button1_label"/>
+	    <Button
+	    	android:id="@+id/button2"    
+	        android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:text="@string/button2_label"/>
+	    
+	</LinearLayout>
 </LinearLayout>
